--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,15 @@ main
 test
 
 # ignore files that cant be modified
+bmp.c
+bmp.h
+main_iplib.c
+test_bmp.c
 
+runner_gauss.sh
+runner_noise.sh
+
+ip_lib.h
 
 
 # ignore images
